6.1-EKS-Provisioning-with-Push-Based-CICD/eprofile-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    # 1. (ALB Controller)
    kubernetes.io/ingress.class: alb
    
    # 2.Expose the ALB to the internet
    alb.ingress.kubernetes.io/scheme: internet-facing
    
    # 3. Target Type: for pods 
    alb.ingress.kubernetes.io/target-type: ip
    
    # 4. port configuration: for HTTP traffic on port 80
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vproapp-service ## Tomcat service name 
                port:
                  number: 8080
